fix: set cart to wrap in mobile and tablet mode

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,7 +10,19 @@ main {
   width: min(1316px, 90%);
   margin: auto;
   padding: 1rem 0;
-  // flex-wrap: wrap; 
+  // flex-wrap: wrap;
+
+  @media (max-width: 768px) {
+    flex-wrap: wrap;
+
+    .desserts-container{
+      justify-content: center;
+    }
+
+    .cart{
+      width: 80%;
+    }
+  }
 }
 
 
@@ -31,6 +43,7 @@ main {
   flex-wrap: wrap;
   width: 100%;
   height: 100%;
+  
 
   .dessert-item {
     @include flex(column, flex-start, stretch, 2rem);
